# chiltepin

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  release.sh
.github/workflows/: release.yml  test-release.yml
docs/: agents.rst  api.rst  conf.py  configuration.rst  container.rst  data.rst  endpoints.rst  index.rst  installation.rst  quickstart.rst  tasks.rst  testing.rst
recipe/: README.md  meta.yaml
src/chiltepin/: __init__.py  agents.py  data.py  endpoint.py  tasks.py  workflow.py
tests/: test_agents.py  test_data.py  test_endpoint.py  test_globus_compute_hello.py  test_globus_compute_mpi.py  test_init.py  test_parsl_hello.py  test_parsl_mpi.py  test_tasks.py  test_workflow.py
